<resources>
    <string name="app_name">Buszjegy_mobilalkfejl_2024</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
    <string name="registration">Regisztráció</string>
    <string name="login">Bejelentkezés</string>
    <string name="logout">Kijelentkezés</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="licenses">Igazolványok</string>
    <string name="purchases">Vásárlásaim</string>
    <string name="billing_addres">Számlázási cím</string>
    <string name="profile">Profilom</string>
    <string name="purchase_confirmation_message">Biztosan megszeretnéd vásárolni?</string>
    <string name="confirm">Igen</string>
    <string name="decline">Nem</string>
    <string name="purchase">Vásárlás</string>
    <string name="purchase_confirmation_message_title">Vásárlás megerősítése</string>
    <string name="delete_ticket">Jegy törlése</string>
    <string name="valid_duration">Érvényes</string>
    <string name="purchase_ticket_delete_message_title">Jegy törlése</string>
    <string name="purchase_ticket_delete_message">Biztosan ki szeretnéd törölni ezt a jegyet a rendszerből?</string>
    <string name="city">Város</string>
    <string name="ticket_type">Jegy típusa</string>
    <string name="search">Keresés</string>
    <string name="app_logo_img_text">Buszjegy logo</string>
    <string name="for_name">Vezetéknév</string>
    <string name="sur_name">Keresztnév</string>
    <string name="postal_code">Irányítószám</string>
    <string name="street">Utca</string>
    <string name="house_number">Házszám</string>
    <string name="modify">Módosítás</string>
    <string name="email">Email cím</string>
    <string name="password">Jelszó</string>
    <string name="birth_date">Születési év</string>
    <string name="password_confirm">Jelszó megerősítése</string>
    <string name="no_tickets_image">no_tickets_image</string>
    <string name="place_holder">Place Holder</string>
    <string name="id_card_image">ID_card_image</string>
    <string name="wallet_image">wallet_image</string>
    <string name="ios_next_button_image">ios_next_button_image</string>
    <string name="bill_image">bill_image</string>
    <string name="profile_image">profile_image</string>
    <string name="test_email">test@email.com</string>
    <string name="bus_image">bus_image</string>
</resources>