<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/billingAdressForName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/for_name"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/billingAdressSurName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sur_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/billingAdressPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postal_code"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:maxLength="5"/>

        <EditText
            android:id="@+id/billingAdressCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/billingAdressStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/billingAdressHouseNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/house_number"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"/>

        <Button
            android:id="@+id/billingAdressModifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/modify"/>

    </LinearLayout>
</ScrollView>