<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <ImageView
                android:id="@+id/ticketBusImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/baseline_directions_bus_24"
                android:layout_centerVertical="true"
                android:contentDescription="@string/bus_image" />

            <TextView
                android:id="@+id/ticketPlaceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:textSize="15sp"
                android:layout_marginStart="7dp"
                android:textStyle="bold"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/ticketDurationTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:layout_toEndOf="@id/ticketPlaceName"
                android:layout_marginStart="20dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/ticketDurationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@id/ticketDurationTimeText"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/ticketPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/ticketDurationText"
                android:layout_alignEnd="@id/ticketDurationText"/>

            <Button
                android:id="@+id/ticketBuyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ticketPrice"
                android:layout_toEndOf="@id/ticketBusImage"
                android:text="@string/purchase" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
